--- a/style.css
+++ b/style.css
@@ -1073,14 +1073,33 @@ header.header-sm .menu-icon .menu-line {
   display: none;
 }
 
+.form-container .buttons {
+  margin-top: 15px;
+  position: relative;
+}
+
 .form-container .submit-button {
   width: 100%;
   min-height: 50px;
   padding: 15px;
-  margin-top: 15px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  border: 0;
+  font-size: 16px;
+  line-height: 25px;
+  color: #ffffff;
+  background: #ee1e23;
+  cursor: pointer;
+}
+
+.form-container .sub-button {
+  width: 100%;
+  padding: 15px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
   color: #ffffff;
   background: #ee1e23;
   cursor: pointer;
